syntax = "proto3";

package communication;

// ===================================================================
// پیام‌های کلاینت به سرور (Client to Server)
// ===================================================================

message ClientToServer {
  oneof payload {
    InitialRequest initial_request = 1;
    RoomMessage room_message = 2;
  }
}

message InitialRequest {
    oneof request_type {
        CreateRoomRequest create_room = 1;
        JoinRoomRequest join_room = 2;
        ReplayRoomRequest replay_room = 3;
        ListRecordingsRequest list_recordings = 4;
    }
}

message ListRecordingsRequest {}

message CreateRoomRequest {
    string username = 1;
}

message JoinRoomRequest {
    string room_id = 1;
    string username = 2;
}

message ReplayRoomRequest {
    string log_filename = 1;
}

message RoomMessage {
  oneof payload {
    CanvasCommand canvas_command = 1;
    AudioChunk audio_chunk = 2;
  }
}

message Point {
    double dx = 1;
    double dy = 2;
}

message PathStart {
    string id = 1;
    Point point = 2;
    uint32 color = 3;
    double stroke_width = 4;
}

message PathAppend {
    string id = 1;
    Point point = 2;
}

message PathFull {
    string id = 1;
    repeated Point points = 2;
    uint32 color = 3;
    double stroke_width = 4;
}

message CanvasCommand {
  int64 timestamp_ms = 1;
  oneof command_type {
    PathStart path_start = 2;
    PathAppend path_append = 3;
    PathFull path_full = 4;
  }
}

message AudioChunk {
  bytes data = 1;
  int64 sequence = 2;
}


// ===================================================================
// پیام‌های سرور به کلاینت (Server to Client)
// ===================================================================

message ServerToClient {
    oneof payload {
        InitialResponse initial_response = 1;
        RoomEvent room_event = 2;
    }
}

message InitialResponse {
    oneof response_type {
        CreateRoomResponse create_room_response = 1;
        JoinRoomResponse join_room_response = 2;
        ErrorResponse error_response = 3;
        ListRecordingsResponse list_recordings_response = 4;
    }
}

message ListRecordingsResponse {
    repeated string filenames = 1;
}

message CreateRoomResponse {
    string room_id = 1;
}

message JoinRoomResponse {
    string message = 1;
}

message ErrorResponse {
    string message = 1;
}

message RoomEvent {
    oneof event_type {
        UserJoined user_joined = 1;
        UserLeft user_left = 2;
        BroadcastedCanvasCommand canvas_command = 3;
        BroadcastedAudioChunk audio_chunk = 4;
        HostEndedSession host_ended_session = 5;
    }
}

message HostEndedSession {
    string message = 1;
}

message UserJoined {
    string client_id = 1;
    string username = 2;
}

message UserLeft {
    string client_id = 1;
    string username = 2;
}

message BroadcastedCanvasCommand {
    string from_client_id = 1;
    CanvasCommand command = 2;
}

message BroadcastedAudioChunk {
    string from_client_id = 1;
    AudioChunk chunk = 2;
}
